Constants and private info